fix(ws): flatten admin.broadcast.send data into API body
The handler was forwarding the {channel, name, data} envelope verbatim
to /api/admin/broadcast, but that endpoint expects a flat Jackson
polymorphic body discriminated on 'name' (title, body, ttlSeconds for
alert.info, etc.). Result: any broadcast attempt returned 400 Bad
Request.

Now the handler builds a flat map { name + ...data } before calling
ApiClient, matching what the legacy /admin/broadcast/api/send proxy
controller used to send. ApiClient signature changed from typed Params
to Map<String,Object> for the same reason.